--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "by wathing tutorials",
   "main": "app.js",
   "scripts": {
-    "watch": "nodemon app" ,
+    "watch": "nodemon db",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +12,8 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "mongodb": "^3.6.0",
+    "nodemon": "^2.0.4",
+    "validator": "^13.1.1"
   }
 }
